--- a/package.json
+++ b/package.json
@@ -11,7 +11,20 @@
     "watch": "nodemon -e ts -w ./src -x npm run watch:serve",
     "watch:serve": "ts-node --inspect src/server.ts"
   },
-  "author": "Guilherme Firmiano Goncalves",
+  "author": {
+    "name": "CamaleonJS",
+    "url": "https://github.com/camaleonjs"
+  },
+  "contributors": [
+    {
+      "name": "Guilherme Firmiano Gonçalve",
+      "email": "firmiano_g@hotmail.com"
+    },
+    {
+      "name": "Rafael Vargas",
+      "email": "raafvargas@hotmail.com"
+    }
+  ],
   "license": "ISC",
   "dependencies": {
     "camaleon-api": "^1.0.*",
@@ -22,5 +35,9 @@
   "devDependencies": {
     "nodemon": "^1.11.0",
     "ts-node": "^3.2.0"
+  },
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/camaleonjs/camaleon-api-samples.git"
   }
 }
