--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "typescript": "^2.4.1"
   },
   "devDependencies": {
+    "@types/node": "^8.0.50",
     "nodemon": "^1.11.0",
     "ts-node": "^3.2.0"
   },
   "repository": {
-      "type": "git",
-      "url": "https://github.com/camaleonjs/camaleon-api-samples.git"
+    "type": "git",
+    "url": "https://github.com/camaleonjs/camaleon-api-samples.git"
   }
 }
