--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build-watch": "tsc -w",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "watch": "nodemon -e ts -w ./src -x npm run watch:serve",
-    "watch:serve": "ts-node --inspect src/server.ts"
+    "watch:serve": "ts-node --inspect src/server.ts",
+    "test": "mocha -r ts-node/register __tests__/**/*.spec.ts --exit"
   },
   "author": {
     "name": "CamaleonJS",
@@ -33,9 +34,17 @@
     "typescript": "^2.4.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.0.4",
+    "@types/mocha": "^2.2.44",
     "@types/node": "^8.0.50",
+    "@types/supertest": "^2.0.3",
+    "chai": "^4.1.2",
+    "jasmine": "^2.8.0",
+    "jest": "^21.2.1",
+    "mocha": "^4.0.1",
     "nodemon": "^1.11.0",
-    "ts-node": "^3.2.0"
+    "supertest": "^3.0.0",
+    "ts-node": "^3.3.0"
   },
   "repository": {
     "type": "git",
